fix whitespace landing page

--- a/custom.scss
+++ b/custom.scss
@@ -1,10 +1,4 @@
 /*-- scss:defaults --*/
-// @import 'https://fonts.googleapis.com/css2?family=Scope+One:wght@400&display=swap';
-// @import 'https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap';
-// @import 'https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap';
-// @import 'https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap';
-// @import 'https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap';
-
 /* ibm-plex-mono-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -84,12 +78,8 @@ body {
   font-size: $base-font-size * 1.2;
 }
 
-.about-contents {
-    text-align: justify;
-}
-
-main#quarto-document-content {
-    text-align: justify !important;
+#quarto-document-content > p {
+  text-align: justify;
 }
 
 // change width for better legibility
@@ -172,10 +162,11 @@ html {
   text-decoration: none; /* remove underline */
 }
 
-// remove whitespace above table listing page -> not working
-body.listing main#quarto-document-content {
+// remove whitespace above table listing page
+main.content#quarto-document-content {
+  margin-top: 0em !important;
+  margin-bottom: 0em !important;
   padding-top: 0px !important;
-  margin-top: 0px !important;
 }
 
 // meta info article one line
